--- a/about.html
+++ b/about.html
@@ -212,7 +212,7 @@
                     <nav>
                         <ul class="our-link">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="about.html">Prices</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </nav>
