--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <li><i class="fa fa-check" aria-hidden="true"></i> <strong>Proven Track Record </strong>  - We are live since 2022, we have a history of successful and accurate calls that our community relies on.</li>
                         <li><i class="fa fa-check" aria-hidden="true"></i> <strong>Reliable Support </strong>  - Receive dedicated assistance and a supportive community.</li>
                         <li><i class="fa fa-check" aria-hidden="true"></i> <strong> Proven Success </strong>  - Trust our track record of delivering valuable market insights and opportunities.</li>
-                        <li><i class="fa fa-check" aria-hidden="true"></i> <strong>Exclusive Access </strong> - Gain access to our private group where you can interact, share insights, and learn from other successful traders.</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i> <strong>Private group </strong> - Gain access to our private group where you can interact with others.</li>
                         <li><i class="fa fa-check" aria-hidden="true"></i> <strong>24/7 Buybot </strong>  - Experience the convenience of our 24/7 buy bot, prominently featured in our lounge.</li>
                         <li><i class="fa fa-check" aria-hidden="true"></i> <strong>Free Updates </strong>  - We give a free update about your project, when you need it.</li>
                     </ul>
